<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="@dimen/margin_activity_vertical"
		android:paddingEnd="@dimen/margin_activity_horizontal"
		android:paddingLeft="@dimen/margin_activity_horizontal"
		android:paddingRight="@dimen/margin_activity_horizontal"
		android:paddingStart="@dimen/margin_activity_horizontal"
		android:paddingTop="@dimen/margin_activity_vertical">


    <TextView
			android:id="@+id/title_signin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:padding="@dimen/margin_large"
			android:text="Sign In"
      android:textSize="@dimen/text_size_large"
			android:textColor="?attr/textTitleColor"/>


		<TextView
			android:id="@+id/title_email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/textView"
			android:layout_alignStart="@+id/textView"
			android:layout_below="@+id/title_signin"
			android:padding="@dimen/margin_large"
			android:text="@string/enter_email"
      android:textSize="?attr/textTitleSize"
			android:textColor="?attr/textTitleColor"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/email_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/title_email"
			android:layout_centerHorizontal="true"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/edit_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionDone"
				android:inputType="textEmailAddress"
				android:maxLines="1"/>
			<requestFocus/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			android:id="@+id/title_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/email_layout"
			android:layout_marginTop="18dp"
			android:padding="@dimen/margin_large"
			android:text="@string/enter_password"
			android:textSize="?attr/textTitleSize"
			android:textColor="?attr/textTitleColor"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/title_password"
			android:layout_centerHorizontal="true"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/edit_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/enter_password"
				android:imeOptions="actionDone"
				android:inputType="textPassword"
				android:maxLines="1"/>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/btn_sign_in"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/password_layout"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="@string/sign_in_button"/>

		<Button
			android:id="@+id/btn_create_account"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/btn_sign_in"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="Create a New Account Instead"/>

		<Button
			android:id="@+id/btn_reset_password"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/btn_create_account"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="Reset Password"/>

	</RelativeLayout>

</ScrollView>