...
		<item quantity="other">This is a test version of Briar. Your account will expire in %d days and cannot be renewed.</item>
	</plurals>
	<string name="expiry_update">The testing expiry date has been extended. Your account will now expire in %d days.</string>
	<string name="expiry_date_reached">This software has expired.\nThank you for testing!</string>

	<!-- Navigation Drawer -->
	<string name="nav_drawer_open_description">Open the navigation drawer</string>
	<string name="nav_drawer_close_description">Close the navigation drawer</string>
	<string name="contact_list_button">Contacts</string>
	<string name="groups_button">Private Groups</string>
	<string name="forums_button">Forums</string>
	<string name="blogs_button">Blogs</string>
	<string name="profile_button">Profile</string>
...
	</plurals>
	<string name="nobody">Nobody</string>

	<!-- Blogs -->
	<string name="blogs_other_blog_empty_state">This blog is currently empty.\n\nEither the author hasn\'t written anything yet, or the person who shared this blog with you needs to come online, so posts can be synchronized.</string>
	<string name="read_more">read more</string>
	<string name="blogs_write_blog_post">Write Blog Post</string>
	<string name="blogs_write_blog_post_body_hint">Type your blog post here</string>
	<string name="blogs_publish_blog_post">Publish</string>
	<string name="blogs_blog_post_created">Blog Post Created</string>
	<string name="blogs_blog_post_received">New Blog Post Received</string>
	<string name="blogs_blog_post_scroll_to">Scroll To</string>
	<string name="blogs_feed_empty_state">This is the global blog feed.\n\nIt looks like nobody blogged anything, yet.\n\nBe the first and tap the pen icon to write a new blog post.</string>
	<string name="blogs_remove_blog">Remove Blog</string>
	<string name="blogs_remove_blog_dialog_message">Are you sure that you want to remove this blog and all posts?\nNote that this will not remove the blog from other people\'s devices.</string>
	<string name="blogs_remove_blog_ok">Remove Blog</string>
	<string name="blogs_blog_removed">Blog Removed</string>
	<string name="blogs_reblog_comment_hint">Add a comment (optional)</string>
	<string name="blogs_reblog_button">Reblog</string>

	<!-- Blog Sharing -->
	<string name="blogs_sharing_share">Share Blog</string>
	<string name="blogs_sharing_error">There was an error sharing this blog.</string>
	<string name="blogs_sharing_button">Share Blog</string>
...
