...
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/email_entry_wrapper"
			tools:enabled="true"/>

		<Button
			android:id="@+id/btn_log_in"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/next"
			android:text="Log In Instead"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="351dp"
			app:layout_constraintTop_toBottomOf="@+id/next"/>

...
