<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".android.forum.ForumActivity">

	<include layout="@layout/toolbar"/>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<org.briarproject.briar.android.view.BriarRecyclerView
			android:id="@+id/list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:emptyText="@string/no_forum_posts"
			app:scrollToEnd="false"/>

		<org.briarproject.briar.android.view.UnreadMessageButton
			android:id="@+id/upButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="top|right"
			app:direction="up"/>

		<org.briarproject.briar.android.view.UnreadMessageButton
			android:id="@+id/downButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|right"
			app:direction="down"/>

	</FrameLayout>

	<org.briarproject.briar.android.view.TextInputView
		android:id="@+id/text_input_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/button_bar_background"
		android:elevation="@dimen/margin_tiny"
		app:hint="@string/forum_new_message_hint"/>

</LinearLayout>
